--- a/FRONTEND/ArgentBank-website/package.json
+++ b/FRONTEND/ArgentBank-website/package.json
@@ -13,6 +13,9 @@
     "server": "node ./server/server.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
