--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "",
   "main": "index.js",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
@@ -16,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.22",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "swagger-ui-express": "^4.1.4",
     "yamljs": "^0.3.0"
